<resources>
    <string name="app_name">Gup You</string>
    <string name="home_title" translatable="false">Pantalla Principal</string>
    <string name="home_titlse">sasfassf Principal</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_login">Login</string>
    <string name="not_account">¿No Tienes Cuenta?</string>
    <string name="register_btn">Crea Tu Cuenta</string>
    <string name="register_title">Registro</string>
    <string name="register_got_account">¿Tienes Cuenta?</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Tu Contraseña</string>
    <string name="password_confirm_hint">Confirma Contraseña</string>
    <string name="remember_lbl">Recuerdame</string>
    <string name="password_recovery">¿Olvidaste la Pass?</string>
    <string name="login_with">Login Social</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_value_comment_label">Tu valor es %d de %s </string>
    <string name="logout_btn_label">logout</string>
    <string name="notifications_label">Recibir Notificaciones</string>
    <string name="edit_profile_btn">Editar Perfil</string>
    <string name="change_password_btn_label">Cambiar Pass</string>
    <string name="legal_btn_label">Terminos de uso</string>
    <string name="others">Otros</string>
    <string name="alert_dialog_msg">Mensaje de Dialog Alert</string>
    <string name="alert_dialog_title">Titulo de Alert</string>
    <string name="dialog_legal_terms_title">Acuerdo de Condiciones de Uso</string>
    <string name="legal_text" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu est mi. Pellentesque sapien felis, pellentesque nec turpis et, cursus bibendum urna. Nunc eget mi nisl. Sed auctor, ex sed porttitor cursus, odio massa viverra sapien, eget dictum urna nibh ut mauris. Nullam imperdiet nisl eu ligula volutpat molestie. Etiam in magna a leo commodo pharetra sit amet in orci. Duis lobortis nunc vitae dui consequat pharetra. Nullam non ultrices tortor, at porttitor velit. Mauris tincidunt ultrices pharetra. Maecenas elementum massa in dolor mollis, eu blandit nunc porttitor. Donec hendrerit, justo at posuere posuere, orci odio condimentum sapien, et tincidunt urna ligula tincidunt nisl.

Donec rhoncus eget quam id vehicula. In efficitur, metus ut consectetur bibendum, ex nisi viverra ex, et efficitur lectus libero sed massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ligula libero, vehicula quis faucibus et, dapibus vitae augue. Suspendisse ut sapien a justo molestie sagittis. In quis tristique massa. Sed ornare diam id semper hendrerit. Ut ultrices sapien eu volutpat tempus. Mauris quis auctor metus. Quisque scelerisque pulvinar pretium. Suspendisse posuere odio nec arcu gravida ultrices. Mauris rhoncus tellus justo, id ultrices est egestas quis. Suspendisse varius dolor et venenatis pharetra. Suspendisse euismod turpis id lacus aliquam luctus. Proin nec ligula vel odio eleifend volutpat vitae sit amet enim. Etiam quis tincidunt justo.

In mattis est felis, ac fermentum massa venenatis tincidunt. Suspendisse vitae pulvinar tortor. Curabitur blandit ultricies enim, sit amet mollis ex consequat imperdiet. Donec fringilla, sem non pharetra aliquet, urna metus lobortis massa, ac accumsan eros mi a orci. Maecenas non massa vel nisl sagittis pretium pulvinar vitae mi. Aliquam eleifend vestibulum rhoncus. Proin sollicitudin, ex at fringilla aliquam, risus sapien feugiat est, in molestie diam ligula vel orci. Suspendisse tincidunt quam congue facilisis aliquam.

Vestibulum dignissim euismod luctus. Cras ut dui nulla. Ut non purus malesuada, molestie tortor sit amet, lobortis diam. Sed eleifend, leo varius fermentum sagittis, tellus quam pretium nisi, ac pharetra urna diam at urna. Donec nec ligula velit. Aliquam in neque hendrerit, cursus magna non, dapibus enim. Integer facilisis porttitor nibh. Praesent posuere magna non ligula ullamcorper, non consequat ligula lacinia. Nam egestas purus in consectetur auctor. Donec rutrum blandit ligula eget euismod. Nulla sodales at risus et scelerisque. Praesent ut urna sit amet augue interdum facilisis non eu ante.

Aliquam consequat ante quis eros porttitor, elementum egestas quam suscipit. Cras faucibus leo efficitur libero fermentum, non ornare felis imperdiet. Morbi malesuada maximus imperdiet. Nullam accumsan elementum purus, sit amet ullamcorper nibh efficitur eget. Proin iaculis libero in volutpat venenatis. Quisque eu ipsum massa. Nulla eget tincidunt ipsum. Vivamus at nisl vitae purus ultrices bibendum. Curabitur malesuada tempor suscipit. Mauris eleifend, nunc id tempus eleifend, urna nisl fringilla ligula, ac condimentum lectus magna vitae purus. Duis efficitur eros quis tempus laoreet. Aenean id dui eu lorem egestas hendrerit in sit amet lorem. Etiam vitae odio aliquam, ornare elit nec, gravida ipsum.</string>
    <string name="change_pass_title">Cambiar Password</string>
    <string name="change_pass_edt_lbl" >Nueva Contraseña</string>
    <string name="change_pass_confirm_edt_lbl">Confirmar Pass</string>
    <string name="pass_confirm_ok">Contraseña Aceptada</string>
    <string name="pass_confirm_ko">Contraseña No Valida</string>
    <string name="error_registro_formulario">Rellene los campos de Registro</string>
    <string name="error_email_empty">Correo Requerido</string>
    <string name="error_pass_empty">Contraseña Requerida</string>
    <string name="error_confirm_empty">Necesaria Confirmación</string>
    <string name="error_confirm_not_equals">Contraseñas Son Diferentes</string>
    <string-array name="rasgos">
        <item>Higiene</item>
        <item>Dinero</item>
        <item>Carisma</item>
        <item>Elocuencia</item>
        <item>Social</item>
        <item>Responsable</item>
    </string-array>
</resources>